# Hyultis_Game_Engine

./: .gitignore  Cargo.toml  README.md  htrace.json  rustfmt.toml
HGE/: Cargo.toml
HGE/src/: Animation.rs  BuilderDevice.rs  HGEFrame.rs  HGEMain.rs  HGEMain_preinit.rs  HGESwapchain.rs  HGErendering.rs  HGEsubpass.rs  InterpolateTimer.rs  ManagerAnimation.rs  ManagerAudio.rs  ManagerBuilder.rs  ManagerMemoryAllocator.rs  Paths.rs  lib.rs
HGE/src/Interface/: Bar.rs  Line.rs  ManagerFont.rs  ManagerInterface.rs  Text.rs  UiButton.rs  UiHidable.rs  UiPage.rs  Utils2D.rs  mod.rs
HGE/src/Models3D/: ManagerModels.rs  chunk.rs  mod.rs
HGE/src/Pipeline/: ManagerPipeline.rs  PipelineDatas.rs  mod.rs
HGE/src/Shaders/: HGE_shader_2Dsimple.rs  HGE_shader_3Dinstance.rs  HGE_shader_3Dsimple.rs  Manager.rs  ShaderDrawer.rs  ShaderDrawerImpl.rs  ShaderStruct.rs  ShaderStructCache.rs  ShaderStructCacheInstanced.rs  mod.rs
HGE/src/Textures/: Manager.rs  Order.rs  TextureDescriptor.rs  TextureDescriptor_type.rs  Textures.rs  Types.rs  mod.rs  textureLoader.rs  texturePart.rs
HGE/src/Textures/Orders/: Order_loadPart.rs  Order_resize.rs
HGE/src/components/: TimeStats.rs  cacheInfos.rs  color.rs  hideable.rs  interfacePosition.rs  mod.rs  window.rs  worldPosition.rs
HGE/src/components/system/: DeferredDatas.rs  TimeStats.rs  mod.rs
HGE/src/configs/: HGEconfig.rs  general.rs  mod.rs  system_swapchain.rs
HGE/src/entities/: Cube.rs  Teapot.rs  loadOBJ.rs  mod.rs  utils.rs
HGE/src/entities/Plane/: PlaneImpl2D.rs  PlaneImpl3D.rs  mod.rs
HGE/src/fronts/: EngineEvent.rs  Inputs.rs  UserDefinedEventOverride.rs  agnosticHandle.rs  internalWinitState.rs  mod.rs  winit.rs
HGE/src/fronts/sdl/: front.rs  mod.rs  sdl_UserDefinedEventOverride.rs
HGE/src/fronts/winit/: front.rs  internalWinitState.rs  mod.rs  winit_UserDefinedEventOverride.rs
HGE/tests/: shaders.rs  tests.rs
HGE/tests/shaders_glsl/: pc_3D.glsl  textureSurclass.glsl
HGE/tests/shaders_glsl/instance3D/: frag.glsl
HGE/tests/shaders_glsl/screen/: frag.glsl  vert.glsl
HGE/tests/shaders_glsl/simple2D/: vert.glsl
HGE/tests/shaders_glsl/simple3D/: vert.glsl
config/: HGE.json
docs/HGE/: Class interaction.canvas
docs/HGE/.obsidian/: workspace.json
dynamic/traces/: ManagerTexture_20240810_14.trc  main_20240810_14.trc
examples/simple_2D/: Cargo.toml  htrace.json
examples/simple_2D/config/: config.json  htrace.json
examples/simple_2D/dynamic/traces/: FontEngine_20240708_16.trc  ManagerTexture_20240708_16.trc  main_20240708_16.trc
examples/simple_2D/shaders_glsl/: define.glsl  maths.glsl  pc_2D.glsl  utils_color.glsl
examples/simple_2D/shaders_glsl/instance3D/: vert.glsl
examples/simple_2D/shaders_glsl/screen/: frag.glsl  vert.glsl
examples/simple_2D/shaders_glsl/simple3D/: frag.glsl
examples/simple_2D/src/: main.rs  shaders.rs
examples/simple_2D_sdl2/: Cargo.toml  bench.sh
examples/simple_2D_sdl2/shaders_glsl/: pc_3D.glsl  textureSurclass.glsl
examples/simple_2D_sdl2/shaders_glsl/instance3D/: vert.glsl
examples/simple_2D_sdl2/shaders_glsl/screen/: vert.glsl
examples/simple_2D_sdl2/shaders_glsl/simple3D/: vert.glsl
examples/simple_2D_sdl2/src/: main.rs  shaders.rs
src/: Animation.rs  Camera.rs  HGEFrame.rs  HGEMain.rs  HGESwapchain.rs  HGErendering.rs  HGEsubpass.rs  InterpolateTimer.rs  ManagerAnimation.rs  ManagerBuilder.rs  ManagerMemoryAllocator.rs  assetStreamReader.rs  lib.rs
src/Interface/: Bar.rs  Line.rs  ManagerFont.rs  ManagerInterface.rs  Text.rs  UiButton.rs  UiHidable.rs  UiHitbox.rs  UiPage.rs
src/Models3D/: ManagerModels.rs  chunk.rs  chunk_content.rs  mod.rs
src/Pipeline/: mod.rs
src/Shaders/: HGE_shader_2Dsimple.rs  HGE_shader_3Dinstance.rs  HGE_shader_3Dsimple.rs  Manager.rs  ShaderDrawer.rs  ShaderDrawerImpl.rs  ShaderStruct.rs  Shs_2DVertex.rs  Shs_3DVertex.rs  Shs_3Dinstance.rs  Shs_screen.rs  StructAllCache.rs  intoVertexed.rs  mod.rs
src/Textures/: Filter.rs  Manager.rs  Order.rs  TextureDescriptor.rs  Textures.rs  Types.rs  generate.rs  mod.rs  textureLoader.rs  texturePart.rs
src/Textures/Orders/: Order_computeCache.rs  Order_load.rs  Order_loadPart.rs  Order_partialTextureUpdate.rs  Order_reload.rs  Order_resize.rs  mod.rs
src/components/: cacheInfos.rs  corners.rs  enums.rs  event.rs  mod.rs  offset.rs  rotations.rs  scale.rs  texture.rs  uid.rs  uvcoord.rs  window.rs
src/configs/: HGEconfig.rs  general.rs
src/entities/: Cube.rs  Teapot.rs  loadOBJ.rs  mod.rs
src/entities/Plane/: PlaneImpl2D.rs  PlaneImpl3D.rs  mod.rs
src/fronts/: winit.rs
tests/: shaders.rs  tests.rs
tests/shaders_glsl/: define.glsl  pc_2D.glsl  textureSurclass.glsl
tests/shaders_glsl/instance3D/: frag.glsl
tests/shaders_glsl/simple2D/: frag.glsl
tests/shaders_glsl/simple3D/: frag.glsl
