[workspace]
members = [
    "HGE",
    "examples/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
Hconfig = "1.1"
Htrace = "1.0.2" #{ path = "../../rust/Htrace" }
singletonThread = "1.1"
HArcMut = "1.1"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
