[package]
name = "HGE"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
#default = ["dynamicresolution"]
dynamicresolution = []
debuglayer = []
front_winit = ["winit"]
front_sdl = ["sdl2"]

[dependencies]
#base stuff
foldhash = "0.1.3"
dashmap = { version = "6.1.0", features = ["rayon"] }
dyn-clone = "1.0.17"
parking_lot = "0.12.3"
anyhow = "1.0.91"
rayon = "1.10.0"
arc-swap = "1.7.1"
HArcMut = { workspace = true }
singletonThread = { workspace = true }
bytemuck = "1.19.0"
derive_more = { version = "1.0.0", features = ["full"] }
downcast-rs = "1.2.1"
state-shift = "2.1.0"

#data
#vergen = "8.2.4"
csv = "1.3.0"
Hconfig = { workspace = true }
Htrace = { workspace = true }
uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng"] }

#graphic
sdl2 = { version = "0.37.0", optional = true, features = ["raw-window-handle"] }
#vulkano = "0.34.1"
vulkano = { workspace = true }
raw-window-handle = "0.6"
image = "0.25.4"
palette = "0.7.6"
ab_glyph = "0.2.29"
glyph_brush = "0.7.11"
glyph_brush_layout = "0.2.4"

#3D
tobj = "4.0.2"
cgmath = "0.18.0"

#audio
rodio = "0.19.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.8", features = ["rwh_06"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.8", features = ["rwh_06", "android-game-activity"], optional = true }
android-activity = { version = "0.6.0", features = ["game-activity"] }

[dev-dependencies]
vulkano-shaders = "0.34.0"
