[package]
name = "simple_2D"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
HGE = {path = "../../HGE" }
Hconfig = { workspace = true }
Htrace = { workspace = true }
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
cgmath = "0.18.0"
HArcMut = "1.1.1"
downcast-rs = "1.2.0"
ab_glyph = "0.2.25"
glyph_brush = "0.7.8"
glyph_brush_layout = "0.2.3"

[[bin]]
path= "src/main.rs"
name="simple_2D"
